# renderlib

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  build_shaders.py  config.h.in  main.cpp  node.cpp  node.h  stats.py  vcpkg.json
.github/composite-actions/install-dependencies/: action.yml
.github/composite-actionsins/tall-dependencies/: action
.github/workflows/: build.yml  cmake-multi-platform.yml  code-checks.yml  codestyle.yml  cpp-linter.yml  сodestyle.yml
Scene/: Camera.cpp  Camera.h
Scene/SceneTests/: CameraTest.cpp
assets/: basicmesh.glb  cube.glb  sphere.glb
cmake/: addGTest.cmake  compileShaders.cmake  linkPackages.cmake  options.cmake
demo/: CMakeLists.txt  main.cpp
demo/shaders/: shader.vert
include/: IController.h  main.h
include/core/: .gitignore  Application.h  ControllerImpl.h  Defines.h  IWindow.h  KeyCodes.h  Layer.h  LayerStack.h  ModelImpl.h  MouseCodes.h  SDLWindow.h  View.h  ViewImpl.h  application.h  config.h  logging.h  node.h
include/event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
include/graphics/: graphics.h
include/imgui/: ImGuiLayer.h
include/interfaces/: IController.h  IModel.h
include/internal/: renderer.h  vulkan_command_pool.h  vulkan_device.h  vulkan_graphics_pipeline.h  vulkan_instance.h  vulkan_physical_device.h  vulkan_render.h  vulkan_render_pass.h  vulkan_surface.h  vulkan_swap_chain.h
include/scene/: Camera.h  GlobalTransformComponent.h  Light.h  LocalToWorldComponent.h  LocalTransformComponent.h  MeshSystem.h  Node.h  ParentComponent.h  ParentSystem.h  TransformSystem.h  global_transform_component.h  mesh_component.h  mesh_system.h  parent_component.h  parent_system.h  transform_system.h
include/scene/interfaces/: IModel.h
scripts/: build_shaders.py  clang-format-all.sh  hook_install.sh  pre-commit  stats.py
shaders/: colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  shader.vert  shader.vert.spv  tex_image.frag
src/: CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  View.cpp  config.h.in  main.cpp
src/core/: Application.cpp  Asserts.h  CMakeLists.txt  CameraController.cpp  CameraController.h  Controller.cpp  ControllerImpl.cpp  IWindow.cpp  Layer.cpp  LayerStack.cpp  Logging.h  Mesh.cpp  Mesh.h  MeshController.cpp  Model.cpp  ModelImpl.cpp  Ref.cpp  Ref.h  SDLWindow.cpp  View.cpp  ViewImpl.cpp  application.cpp  createInstance.cpp  logging.h  node.cpp
src/graphics/: CMakeLists.txt  Graphics.cpp  graphics.cpp
src/graphics/drivers/vulkan/: VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRender.cpp  VulkanRender.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h
src/graphics/vulkan/: ComputePipeline.cpp  GraphicsPipeline.cpp  MeshNode.cpp  RenderableGLTF.cpp  VkDescriptors.cpp  VkEngine.cpp  VkImages.cpp  VkInitializers.cpp  VkLoader.cpp  VkPipelines.cpp  camera.cpp  camera.h  gltf_roughness_pipeline.cpp  mesh_pipeline.cpp  pipeline_interface.h  pipelines.cpp  pipelines.h  triangle_pipeline.cpp  vk_command_buffers.cpp  vk_command_buffers_container.cpp  vk_default_data.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_drawing.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_renderer.cpp  vk_swapchain.cpp  vk_types.h
src/imgui/: CMakeLists.txt  ImGuiLayer.cpp  imgui_impl_sdl2.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/impl/: ControllerImpl.cpp  ControllerImpl.h  ModelImpl.cpp  ModelImpl.h  ViewImpl.cpp
src/include/core/: CameraController.h  Controller.h  ControllerImpl.h  Defines.h  Logging.h  Mesh.h  MeshController.h  Model.h  ModelImpl.h  View.h  ViewImpl.h
src/include/graphics/: Graphics.h
src/include/graphics/vulkan/: ComputePipeline.h  GraphicsPipeline.h  IPipeline.h  MeshNode.h  RenderableGLTF.h  VkDescriptors.h  VkEngine.h  VkImages.h  VkInitializers.h  VkLoader.h  VkPipelines.h  VkTypes.h  pipelines.h  vk_command_buffers.h  vk_command_buffers_container.h  vk_default_data.h  vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_renderer.h  vk_smart_wrappers.h  vk_swapchain.h  vk_types.h
src/include/interfaces/: IModel.h  ISwapchain.h  IView.h
src/include/scene/: Camera.h  GlobalTransformComponent.h  Light.h  LoaderGLTF.h  LocalTransformComponent.h  Mesh.h  MeshComponent.h  MeshSystem.h  Node.h  ParentComponent.h  ParentSystem.h  TransformSystem.h
src/include/view/: Shader.h
src/interfaces/: IController.h  IModel.h
src/internal/: renderer.cpp  vulkan_command_pool.cpp  vulkan_device.cpp  vulkan_graphics_pipeline.cpp  vulkan_instance.cpp  vulkan_physical_device.cpp  vulkan_render.cpp  vulkan_render_pass.cpp  vulkan_surface.cpp  vulkan_swap_chain.cpp
src/scene/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  LoaderGLTF.cpp  LocalTransformComponent.cpp  MeshSystem.cpp  Node.cpp  ParentSystem.cpp  TransformSystem.cpp  mesh_system.cpp  parent_system.cpp  transform_system.cpp
src/view/: CMakeLists.txt  Shader.cpp  Shader.h
tests/: CMakeLists.txt  CameraControllerTest.cpp  CameraTest.cpp  CameraTests.cpp  ShaderTest.cpp  dummy.cpp  test_camera.cpp  test_model.cpp  test_parent_system.cpp  test_vk_descriptors.cpp
